# bil-discord

./: .flake8  .gitignore  Dockerfile  README.md  azure-pipelines.yml  noxfile.py  pyproject.toml
src/bil_discord/: __init__.py  bot.py  cli.py
tests/: test_bil_bot.py
