[tool.poetry]
name = "bil-discord"
version = "0.1.0"
description = ""
authors = ["Eirik Fagerhaug <eirik.fagerhaug@evry.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.0"
pytest-cov = "^2.10.1"
coverage = {version = "^5.3", extras = ["toml"]}
flake8 = "^3.8.3"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
flake8-bandit = "^2.1.2"
flake8-docstrings = "^1.5.0"
darglint = "^1.5.4"
flake8-annotations = "^2.4.1"
pytest-mock = "^3.3.1"
black = "^20.8b1"
flake8-black = "^0.2.1"
mypy = "^0.782"
nox = "^2020.8.22"
xdoctest = "^0.15.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["bil_discord"]

[tool.coverage.report]
show_missing = true
fail_under = 10

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
bil-discord = "bil_discord.cli:main"